2011-11-08  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Correct dependencies for mingw32-gettext-dev, again.

	* mingw32/mingw32-gettext.xml: Also add libexpat dependency
	for -dev component. Remove unnecessary dependencies for
	gettext-dev 0.17-1.
	* mingw32/issue.log: Update accordingly.

2011-11-08  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Correct dependencies for mingw32-gettext-dev.

	* mingw32/mingw32-gettext.xml: Add libstdc++ and libgomp
	dependencies for -dev component. Modify all libgcc dependency
	specifications to include subsystem version wildcard.
	* mingw32/issue.log: Update accordingly.

2011-11-06  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish msys-xz.

	* msys/msys-xz.xml: Update to xz-5.0.3-1.
	* msys/issue.log: Update accordingly.

2011-11-06  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mgwport-0.10.6-1.

	* mingw32/mingw32-mgwport.xml: Add 0.10.6-1 release.
	* mingw32/issue.log: Update accordingly.


2011-11-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.4-alpha-1 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-11-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adopt mingw32-libunistring as a contributed package;
	relegate mingw32-pdcurses to contributed status.

	* mingw32/mingw32-package-list.xml: Add mingw32-libunistring.xml hook;
	relocate mingw32-pdcurses.xml reference to contributed package group.

	* mingw32/mingw32-pdcurses.xml: Remove file.

	* mingw32/issue.log: Update accordingly.

2011-10-31  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update and publish msys-gettext, msys-libiconv.
	Correct versioning issue with mingw32-{gettext,libiconv}.

	* msys/msys-gettext.xml: Update to 0.18.1.1-1.
	* msys/msys-libiconv.xml: Update to 1.14-1.
	* msys/issue.log: Updated accordingly.
	* mingw32/mingw32-gettext.xml: Version 0.18.1.1-2 requires