@@ -35,7 +35,7 @@
   3df1f38d5924070bb1a51e32fb4e8f9ffd895690 2011101100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
   8bb891214b354f906db82e4b5bf72c6d655562f2 2011091500 mingw32-gcc4.xml
-  45978fa489e407f1d15c10b7cdf3e2b62d561ee8 2011102200 mingw32-gdb.xml
+  6dde45599a1ea9abea8912e6e92b77408d70a06f 2011111500 mingw32-gdb.xml
   8ba336812b4016c512a3e7239a0948a3a494b6f4 2011101100 mingw32-gendef.xml
   352ff30d7d315b5d5e039ad0abce2ec4019566aa 2011110902 mingw32-gettext.xml
   753225ffa6c00882b8e5aaf0c1be392e75dad30d 2010083100 mingw32-gmp.xml
