@@ -18,28 +18,23 @@
         </paragraph>
       </description>
 
+      <source tarname="gdb-%-mingw32-%-src.tar.%" />
+      <licence tarname="gdb-%-mingw32-%-doc.tar.%" />
+
       <component class="bin">
         <release tarname="gdb-7.3.1-1-mingw32-bin.tar.lzma" >
-          <source tarname="gdb-%-mingw32-src.tar.lzma" />
-          <licence tarname="gdb-%-mingw32-doc.tar.lzma" />
           <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
         </release>
         <release tarname="gdb-7.3-2-mingw32-bin.tar.lzma" >
-          <source tarname="gdb-%-mingw32-src.tar.lzma" />
-          <licence tarname="gdb-%-mingw32-doc.tar.lzma" />
           <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
         </release>
         <release tarname="gdb-7.3-1-mingw32-bin.tar.lzma" >
-          <source tarname="gdb-%-mingw32-src.tar.lzma" />
-          <licence tarname="gdb-%-mingw32-doc.tar.lzma" />
           <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
         </release>
         <release tarname="gdb-7.2-1-mingw32-bin.tar.lzma" >
-          <source tarname="gdb-%-mingw32-src.tar.lzma" />
-          <licence tarname="gdb-%-mingw32-doc.tar.lzma" />
           <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
         </release>
         <release tarname="gdb-7.1-2-mingw32-bin.tar.gz" >
